# game-developers-toolkit

./: CMakeLists.txt  DEPENDENCIAS.cmake  Doxyfile  GDT.kdevelop  GDT.kdevelop.filelist  GDT.kdevelop.pcs  Project.tag  README.md  SCRIPTING.cmake  VIDEO.cmake  app.rc  gdt.cbp  gdt.dev  gen_kdevelop  gen_unix  libgdt+fisica.dev  libgdt+fisica.layout  libgdt-static.dev  libgdt.dev  libgdt.layout  libgdt.sln  libgdt.vcproj
debian/: README.Debian  changelog  control  copyright  files  libgdt-dev.install  libgdt.install  libgdt.substvars  rules
demo20/: CMakeCache.txt  CMakeLists.txt  main.cpp
demo20/media_demo/: logo3d.x  logogdt3d.my3d  muni.my3d  q3diffdm2.txt  welcomec.mid
demos/: CMakeLists.txt  DEPENDENCIAS.cmake  GDT.cmake
demos/skeleton/: CMakeLists.txt  DEPENDENCIAS.cmake  GDT.cmake  GDT_Recursos.h  GDT_Recursos.rc  Makefile.win  Skeleton.dev  Skeleton.layout  main.cpp  skeleton.vcproj
gdt/: CMakeLists.txt  FISICA.cmake  SONIDO.cmake  cmake_install.cmake  gd_agua.cpp  gd_agua.h  gd_animador.cpp  gd_animador.h  gd_archivo.cpp  gd_archivo.h  gd_cadena.cpp  gd_cadena.h  gd_camara.cpp  gd_camara.h  gd_cartelera.cpp  gd_cartelera.h  gd_colisiones3d.cpp  gd_colisiones3d.h  gd_controlesprediseniados.cpp  gd_controlesprediseniados.h  gd_cronometro.cpp  gd_cronometro.h  gd_escenario.cpp  gd_escenario.h  gd_fisicasNWTNOcuerpo.cpp  gd_fisicasNWTNOcuerpo.h  gd_fisicasNWTNOmaterial.cpp  gd_fisicasNWTNOmaterial.h  gd_fisicasNWTNOnwtno.cpp  gd_fisicasNWTNOnwtno.h  gd_fisicasNwtCuerpo.cpp  gd_fisicasNwtCuerpo.h  gd_fisicasNwtMaterial.cpp  gd_fisicasNwtMaterial.h  gd_fisicasNwtMundo.cpp  gd_fisicasNwtMundo.h  gd_fisicasODEcuerpo.cpp  gd_fisicasODEcuerpo.h  gd_fisicasODEsistema.cpp  gd_fisicasODEsistema.h  (+68 more)
gdt/gdt/: CMakeLists.txt  gd_agua.cpp  gd_agua.h  gd_archivo.h  gd_cartelera.cpp  gd_colisiones3d.h  gd_controlesprediseniados.h  gd_cuerpo.cpp  gd_cuerpo.h  gd_escenario.cpp  gd_gui.cpp  gd_gui.h  gd_guibarra.cpp  gd_guiboton.h  gd_guidialogoabrir.cpp  gd_guiimagen.cpp  gd_guiimagen.h  gd_guimenu.cpp  gd_guitexto.cpp  gd_guitexto.h  gd_guiventana.cpp  gd_listaarchivos.cpp  gd_listaarchivos.h  gd_luz.cpp  gd_material_nwtno.h  gd_panorama.cpp  gd_panorama.h  gd_particula.h  gd_sistema.cpp  gd_sistema.h  gd_sistemalua.cpp  gd_sistemamatematicas.cpp  gd_sistemasonido.cpp  gd_sonido.cpp  gd_sonido.h  gd_terreno.cpp  gd_textura.h  gdt.h
media_demo/: bdog3dm1.pk3  bdog3dm1.txt  rpg3dm2.txt
templates/: cpp
