PROJECT(GDTDEMOS CXX)

#MESSAGE("Directorio inicial: " ${CMAKE_CURRENT_SOURCE_DIR})

#ADD_CUSTOM_TARGET(demos)
#ADD_DEPENDENCIES (demos gdt)

IF(GDT_FROM_ROOT)
	INCLUDE_DIRECTORIES(${GDT_SOURCE_DIR}/gdt)
	INCLUDE_DIRECTORIES(${GDT_SOURCE_DIR}/demos/intro)

	SET(EXECUTABLE_OUTPUT_PATH ${GDT_SOURCE_DIR}/bin/linux-x86)
	SET(ENLACES_DIR ${GDT_SOURCE_DIR} ${GDT_SOURCE_DIR}/gdt)

	IF(WIN32)
		LINK_DIRECTORIES (${ENLACES_DIR} ${GDT_BINARY_DIR}/bin/win32)
	ENDIF(WIN32)
	IF(UNIX)
		LINK_DIRECTORIES (${ENLACES_DIR} ${GDT_BINARY_DIR}/bin/linux-x86)
	ENDIF(UNIX)

ELSE(GDT_FROM_ROOT)
	MESSAGE("DEMOS: Directorio de demos: " ${GDTDEMOS_SOURCE_DIR})
	INCLUDE_DIRECTORIES(intro)
	#SET(EXECUTABLE_OUTPUT_PATH ${GDTDEMOS_SOURCE_DIR}/bin)
ENDIF(GDT_FROM_ROOT)

MESSAGE("DEMOS: Directorio de salida de ejecutables: " ${EXECUTABLE_OUTPUT_PATH})

IF(OBJETOS)
	SET(OBJETOS_DEMO ${OBJETOS}/demos)
ELSE(OBJETOS)
	SET(OBJETOS_DEMO ${CMAKE_CURRENT_SOURCE_DIR}/OBJS)
ENDIF(OBJETOS)
SET(CMAKE_BINARY_DIR ${OBJETOS_DEMO})

MESSAGE("DEMOS: Directorio de salida de objetos: " ${CMAKE_BINARY_DIR})

#####################################################################
INCLUDE (DEPENDENCIAS.cmake)
INCLUDE (GDT.cmake)

IF(GDT_FOUND)

	# ESTE ES UN PROGRAMA PARA PROBAR LAS CARACTRERISTICAS DE GDT
	# NO ES UN DEMO OFICIAL, ES SOLO PARA HACER EXPERIMENTOS
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/experimentos)
		ADD_SUBDIRECTORY (experimentos ${OBJETOS_DEMO})
		#ADD_DEPENDENCIES (demos experimentos)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/experimentos)

	########### RUTAS PARA INCLUIR DENTRO DE DEMO ############
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/juegodemo)
		ADD_SUBDIRECTORY (juegodemo ${OBJETOS_DEMO})
		#ADD_DEPENDENCIES (demos juegodemo)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/juegodemo)

	## DEMOS DE SISTEMA ##

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/cadenas)
		ADD_SUBDIRECTORY (cadenas ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/cadenas)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/archivos)
		ADD_SUBDIRECTORY (archivos ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/archivos)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/xml)
		ADD_SUBDIRECTORY (xml ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/xml)

	## DEMOS DE NODOS ##
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/agua)
		ADD_SUBDIRECTORY (agua ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/agua)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/mallas)
		ADD_SUBDIRECTORY (mallas ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
		#ADD_DEPENDENCIES (demos mallas)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/mallas)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/mallasanimadas)
		ADD_SUBDIRECTORY (mallasanimadas ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/mallasanimadas)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/luces)
		ADD_SUBDIRECTORY (luces ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
		#ADD_DEPENDENCIES (demos luces)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/luces)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/particulas)
		ADD_SUBDIRECTORY (particulas ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/particulas)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/colisiones)
		ADD_SUBDIRECTORY (colisiones ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/colisiones)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/quakelevel)
		ADD_SUBDIRECTORY (quakelevel ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/quakelevel)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/terreno)
		ADD_SUBDIRECTORY (terreno ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/terreno)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/panorama)
		ADD_SUBDIRECTORY (panorama ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/panorama)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/huesos)
		ADD_SUBDIRECTORY (huesos ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/huesos)

	## DEMOS DE EFECTOS ##
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/parallaxmapping)
		ADD_SUBDIRECTORY (parallaxmapping ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/parallaxmapping)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sombras)
		ADD_SUBDIRECTORY (sombras ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sombras)

	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/movimiento)
		ADD_SUBDIRECTORY (movimiento ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/movimiento)

	## DEMOS DE SONIDO ##
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sonido)
		ADD_SUBDIRECTORY (sonido ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sonido)
##	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/05_musik)
##		ADD_SUBDIRECTORY (05_musik ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
##	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/05_musik)

	## DEMOS DE CONTROLES GUI ##
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/texto)
		ADD_SUBDIRECTORY (texto ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/texto)

	## DEMOS DE FISICAS ##
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/fisicasnewton)
		ADD_SUBDIRECTORY (fisicasnewton ${OBJETOS_DEMO} EXCLUDE_FROM_ALL)
	ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/fisicasnewton)

ENDIF(GDT_FOUND)
